--- a/app/src/main/res/layout/parking_area_item.xml
+++ b/app/src/main/res/layout/parking_area_item.xml
@@ -23,12 +23,25 @@
                 android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
                 android:contentDescription="@string/parking_area_title"/>
         <TextView
-                android:id="@+id/parking_area_item_textview_info"
+                android:id="@+id/parking_area_item_textview_number_of_parkings"
                 android:text="Total parking"
-                android:layout_width="50dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"/>
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+        <TextView
+                android:id="@+id/parking_area_item_textview_free_parkings"
+                android:text="TextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
+                app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_number_of_parkings"
+                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
