--- a/app/src/main/res/layout/parking_area_item.xml
+++ b/app/src/main/res/layout/parking_area_item.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content">
+                                             android:layout_height="wrap_content"
+                                    android:layout_margin="24dp"
+                                    card_view:cardCornerRadius="16dp"
+
+
+>
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
-                                                 android:layout_height="wrap_content">
+                                                 android:layout_height="wrap_content" android:translationZ="24dp">
 
         <TextView
                 android:id="@+id/parking_area_item_textview_title"
@@ -12,16 +18,21 @@
                 android:layout_height="wrap_content"
                 android:text="@string/parking_area_title"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
+                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp" android:textSize="24sp"/>
         <ImageView
                 android:id="@+id/parking_area_item_imageview_parking"
-                android:layout_width="50dp"
-                android:layout_height="50dp" app:srcCompat="@mipmap/ic_launcher_round"
-
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
-                android:contentDescription="@string/parking_area_title"/>
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/parking_icon_96"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
+                android:contentDescription="@string/parking_area_title" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintEnd_toStartOf="@+id/parking_area_item_textview_number_of_parkings"
+                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                android:cropToPadding="false" android:adjustViewBounds="true" android:layout_width="wrap_content"/>
         <TextView
                 android:id="@+id/parking_area_item_textview_number_of_parkings"
                 android:text="Total parking"
@@ -29,9 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
-                android:layout_marginStart="8dp"
                 app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="18sp"/>
         <TextView
                 android:id="@+id/parking_area_item_textview_free_parkings"
                 android:text="TextView"
@@ -42,6 +52,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_number_of_parkings"
                 android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
