--- a/app/src/main/res/layout/parking_area_item.xml
+++ b/app/src/main/res/layout/parking_area_item.xml
@@ -2,9 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 									xmlns:card_view="http://schemas.android.com/apk/res-auto"
 									xmlns:app="http://schemas.android.com/apk/res-auto"
-									xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+									xmlns:tools="http://schemas.android.com/tools"
+									android:layout_width="match_parent"
 									android:layout_height="wrap_content"
-									android:layout_margin="24dp"
+									android:layout_margin="8dp"
 									android:translationZ="24dp"
 									card_view:cardCornerRadius="16dp">
 	<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
@@ -43,36 +44,46 @@
 		<TextView
 				android:id="@+id/parking_area_item_textview_number_of_parkings"
 				android:text="Total parking"
-				android:layout_width="150dp"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="8dp"
 				android:textSize="18sp"
 				app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
 				app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
-				android:layout_marginStart="4dp"/>
+				card_view:layout_constraintEnd_toStartOf="@+id/guideline"/>
 		<TextView
 				android:id="@+id/parking_area_item_textview_free_parkings"
 				android:text="TextView"
-				android:layout_width="150dp"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="8dp"
 				android:layout_marginBottom="8dp"
 				android:textSize="18sp"
 				app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
 				app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_number_of_parkings"
-				app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="4dp"
-		/>
+				app:layout_constraintBottom_toBottomOf="parent"
+				card_view:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginStart="4dp"/>
+		<ImageView
+
+				android:layout_width="50dp"
+				android:layout_height="50dp"
+				app:srcCompat="?attr/colorError"
+				android:id="@+id/parking_area_item_imageview_camera_one"
+				card_view:layout_constraintStart_toStartOf="@+id/guideline"
+				android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+				card_view:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
+				card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="14dp"/>
 		<ImageView
 				android:layout_width="50dp"
 				android:layout_height="50dp"
 				app:srcCompat="?attr/colorError"
-				tools:layout_editor_absoluteY="56dp" tools:layout_editor_absoluteX="211dp"
-				android:id="@+id/imageView4"/>
-		<ImageView
-				android:layout_width="50dp"
-				android:layout_height="50dp"
-				app:srcCompat="?attr/colorError"
-				tools:layout_editor_absoluteY="56dp" tools:layout_editor_absoluteX="280dp"
-				android:id="@+id/imageView5"/>
+				android:id="@+id/parking_area_item_imageview_camera_two"
+				android:layout_marginStart="8dp"
+				card_view:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_camera_one" android:layout_marginTop="8dp"
+				card_view:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
+				card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="14dp"/>
+		<android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
+											  android:id="@+id/guideline" card_view:layout_constraintGuide_begin="204dp"
+											  android:orientation="vertical"/>
 	</android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
