--- a/app/src/main/res/layout/image_dialog.xml
+++ b/app/src/main/res/layout/image_dialog.xml
@@ -2,18 +2,27 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 											 xmlns:app="http://schemas.android.com/apk/res-auto"
 											 xmlns:tools="http://schemas.android.com/tools"
-											 android:layout_width="match_parent"
-											 android:layout_height="match_parent"
-											 android:background="@color/colorAccent">
+											 android:layout_width="wrap_content"
+											 android:background="@android:color/transparent"
+											 android:layout_height="wrap_content">
 
 
 	<ImageView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
 			android:id="@+id/imageView"
-			android:background="@color/colorPrimary"
+			android:background="@android:color/transparent"
 			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="141dp"
 			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="142dp"
 			android:layout_marginBottom="302dp" app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_marginTop="301dp" app:layout_constraintTop_toTopOf="parent"/>
+	<android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+
+														android:layout_width="wrap_content"
+														android:layout_height="wrap_content"
+														app:layout_constraintTop_toTopOf="parent"
+														app:layout_constraintStart_toStartOf="parent"
+														android:layout_marginTop="32dp"
+														android:layout_marginStart="32dp"
+														app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"/>
 </android.support.constraint.ConstraintLayout>
