--- a/app/src/main/res/layout/parking_area_item.xml
+++ b/app/src/main/res/layout/parking_area_item.xml
@@ -15,7 +15,7 @@
 				  android:layout_width="match_parent"
 				  android:layout_height="wrap_content"
 				  android:text="@string/parking_area_title"
-				  android:layout_marginTop="16dp"
+				  android:layout_marginTop="8dp"
 				  android:layout_marginEnd="16dp"
 				  android:textSize="24sp"
 				  android:layout_marginStart="8dp"
@@ -29,7 +29,6 @@
 
 				android:contentDescription="@string/parking_area_title"
 				android:layout_marginBottom="8dp"
-				android:layout_marginEnd="8dp"
 				android:layout_marginTop="8dp"
 				android:cropToPadding="false"
 				android:adjustViewBounds="true"
@@ -50,7 +49,9 @@
 				android:textSize="18sp"
 				app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
 				app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
-				card_view:layout_constraintEnd_toStartOf="@+id/guideline"/>
+				card_view:layout_constraintEnd_toStartOf="@+id/guideline"
+
+				android:layout_marginStart="4dp"/>
 		<TextView
 				android:id="@+id/parking_area_item_textview_free_parkings"
 				android:text="TextView"
@@ -71,20 +72,33 @@
 
 				android:id="@+id/parking_area_item_imageview_camera_one"
 				card_view:layout_constraintStart_toStartOf="@+id/guideline"
-				android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+				android:layout_marginStart="15dp" android:layout_marginTop="11dp"
 				card_view:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
-				card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="14dp"/>
+				card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="11dp"
+				card_view:layout_constraintVertical_bias="1.0"
+				android:layout_marginEnd="15dp" card_view:layout_constraintEnd_toStartOf="@+id/guideline2"/>
 		<ImageView
-				android:layout_width="50dp"
+				android:layout_width="48dp"
 				android:layout_height="50dp"
 				app:srcCompat="@drawable/icon_camera_2"
 				android:id="@+id/parking_area_item_imageview_camera_two"
-				android:layout_marginStart="8dp"
-				card_view:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_camera_one" android:layout_marginTop="8dp"
+				android:layout_marginTop="11dp"
 				card_view:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
-				card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="14dp"/>
+				card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="11dp"
+				card_view:layout_constraintVertical_bias="1.0" android:layout_marginStart="8dp"
+				card_view:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
+				card_view:layout_constraintEnd_toEndOf="parent"/>
 		<android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
 											  android:id="@+id/guideline" card_view:layout_constraintGuide_begin="204dp"
 											  android:orientation="vertical"/>
+		<android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
+											  android:id="@+id/guideline2"
+											  card_view:layout_constraintGuide_begin="306dp"
+											  android:orientation="vertical"
+											  card_view:layout_constraintStart_toStartOf="parent"
+											  android:layout_marginStart="306dp"
+											  card_view:layout_constraintEnd_toEndOf="parent"
+											  android:layout_marginEnd="102dp"
+		/>
 	</android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
