--- a/app/src/main/res/layout/parking_area_item.xml
+++ b/app/src/main/res/layout/parking_area_item.xml
@@ -9,14 +9,14 @@
 									android:translationZ="24dp"
 									card_view:cardCornerRadius="16dp">
 	<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
-												 android:layout_height="128dp">
+												 android:layout_height="124dp">
 
 		<TextView android:id="@+id/parking_area_item_textview_title"
 				  android:layout_width="match_parent"
-				  android:layout_height="27dp"
+				  android:layout_height="32dp"
 				  android:text="@string/parking_area_title"
-				  android:layout_marginTop="4dp"
 				  android:layout_marginEnd="16dp"
+				  android:gravity="center_vertical"
 				  android:textSize="24sp"
 				  android:layout_marginStart="8dp"
 				  app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
 
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintVertical_bias="0.0"
-				app:srcCompat="@drawable/icons_parking_96"
+				app:srcCompat="@drawable/parking_icon_96"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@+id/parking_area_item_textview_title"
 				app:layout_constraintEnd_toStartOf="@+id/parking_area_item_textview_number_of_parkings"
@@ -48,9 +48,9 @@
 				android:textSize="18sp"
 				app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
 
-				android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toTopOf="@+id/guideline5"
-				card_view:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="4dp"
-				android:layout_marginStart="4dp"/>
+				android:layout_marginBottom="4dp" card_view:layout_constraintBottom_toTopOf="@+id/guideline5"
+				card_view:layout_constraintEnd_toStartOf="@+id/guideline"
+				android:layout_marginStart="8dp"/>
 		<TextView
 				android:id="@+id/parking_area_item_textview_free_parkings"
 				android:text="TextView"
@@ -58,11 +58,10 @@
 				android:layout_height="wrap_content"
 				android:textSize="18sp"
 				card_view:layout_constraintEnd_toStartOf="@+id/guideline"
-				android:layout_marginEnd="4dp"
 				card_view:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
-				android:layout_marginStart="4dp" android:layout_marginTop="8dp"
-				card_view:layout_constraintTop_toTopOf="@+id/guideline5" android:layout_marginBottom="8dp"
-				card_view:layout_constraintBottom_toBottomOf="parent"/>
+				android:layout_marginStart="8dp" android:layout_marginTop="4dp"
+				card_view:layout_constraintTop_toTopOf="@+id/guideline5"
+		/>
 		<de.hdodenhof.circleimageview.CircleImageView
 				xmlns:app="http://schemas.android.com/apk/res-auto"
 				android:id="@+id/parking_area_item_imageview_camera_one"
@@ -108,7 +107,7 @@
 											  android:layout_marginEnd="102dp"
 		/>
 		<android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
-											  android:id="@+id/guideline5" card_view:layout_constraintGuide_begin="74dp"
+											  android:id="@+id/guideline5" card_view:layout_constraintGuide_begin="72dp"
 											  android:orientation="horizontal"/>
 	</android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
