--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,10 @@
             android:id="@+id/parkings_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+    <ImageView
+            android:id="@+id/background_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"/>
 
 </android.support.design.widget.CoordinatorLayout>
