--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="lightGray">#F5F5F5</color>
+    <color name="lightGray">#FFFFFF</color>
     <color name="transparentDark">#80000000</color>
 </resources>
