--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/spinner_background"/>
+            app:srcCompat="@android:drawable/ic_popup_sync"/>
     <android.support.v7.widget.RecyclerView
             android:id="@+id/parkings_recycler_view"
             android:layout_width="match_parent"
