Move dialg FAB to match

--- a/app/src/main/res/layout/image_dialog.xml
+++ b/app/src/main/res/layout/image_dialog.xml
@@ -20,9 +20,9 @@
 
 														android:layout_width="wrap_content"
 														android:layout_height="wrap_content"
-														app:layout_constraintTop_toTopOf="parent"
-														app:layout_constraintStart_toStartOf="parent"
-														android:layout_marginTop="28dp"
-														android:layout_marginStart="336dp"
-														app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"/>
+														app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+														app:layout_constraintBottom_toBottomOf="parent"
+														android:layout_marginBottom="16dp"
+														android:layout_marginEnd="16dp"
+														app:layout_constraintEnd_toEndOf="parent"/>
 </android.support.constraint.ConstraintLayout>
