--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/lightGray"
-        tools:context=".views.ParkingsActivity">
+        tools:context=".views.ParkingSpacesActivity">
 
     <include layout="@layout/content_main"/>
 
