--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,4 +6,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:showIn="@layout/activity_main"
-        tools:context=".views.ParkingsActivity"/>
+        tools:context=".views.ParkingSpacesActivity"/>
