--- a/app/src/main/res/layout/image_dialog.xml
+++ b/app/src/main/res/layout/image_dialog.xml
@@ -9,15 +9,20 @@
 
 	<ImageView
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
+			android:layout_height="wrap_content"
+			tools:srcCompat="@tools:sample/avatars"
 			android:id="@+id/imageView"
 			android:background="@android:color/transparent"
-			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="141dp"
-			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="142dp"
-			android:layout_marginBottom="302dp" app:layout_constraintBottom_toBottomOf="parent"
-			android:layout_marginTop="301dp" app:layout_constraintTop_toTopOf="parent"/>
+			app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginStart="141dp"
+			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="142dp"
+			android:layout_marginBottom="302dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			android:layout_marginTop="301dp"
+			android:contentDescription="@string/dialog_background_image"
+			app:layout_constraintTop_toTopOf="parent"/>
 	<android.support.design.widget.FloatingActionButton android:id="@+id/fab"
-
 														android:layout_width="wrap_content"
 														android:layout_height="wrap_content"
 														app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
