--- a/app/src/main/res/layout/parking_area_item.xml
+++ b/app/src/main/res/layout/parking_area_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 									xmlns:card_view="http://schemas.android.com/apk/res-auto"
 									xmlns:app="http://schemas.android.com/apk/res-auto"
-									android:layout_width="match_parent"
+									xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
 									android:layout_height="wrap_content"
 									android:layout_margin="8dp"
 									android:translationZ="8dp"
@@ -41,13 +41,14 @@
 		<TextView
 				android:id="@+id/parking_area_item_textview_number_of_parkings"
 				android:text="@string/parking_area_parking_spaces"
-				android:layout_width="142dp"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:textSize="18sp"
 				app:layout_constraintStart_toEndOf="@+id/parking_area_item_imageview_parking"
 				android:layout_marginBottom="4dp" card_view:layout_constraintBottom_toTopOf="@+id/guideline5"
 				card_view:layout_constraintEnd_toStartOf="@+id/guideline"
-				android:layout_marginStart="8dp"/>
+				android:layout_marginStart="8dp"
+		/>
 		<TextView
 				android:id="@+id/parking_area_item_textview_free_parkings"
 				android:text="@string/parking_area_free_parking_spaces"
@@ -91,11 +92,11 @@
 				card_view:layout_constraintBottom_toTopOf="@+id/guideline5"/>
 
 		<android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
-											  android:id="@+id/guideline" card_view:layout_constraintGuide_begin="204dp"
+											  android:id="@+id/guideline" card_view:layout_constraintGuide_begin="279dp"
 											  android:orientation="vertical"/>
 		<android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
 											  android:id="@+id/guideline2"
-											  card_view:layout_constraintGuide_begin="306dp"
+											  card_view:layout_constraintGuide_begin="336dp"
 											  android:orientation="vertical"
 											  card_view:layout_constraintStart_toStartOf="parent"
 											  android:layout_marginStart="306dp"
