--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#333f4f</color>
+    <color name="colorPrimaryDark">#333f4f</color>
+    <color name="colorAccent">#5d6a7b</color>
     <color name="lightGray">#FFFFFF</color>
     <color name="transparentDark">#80000000</color>
 </resources>
