--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,30 +8,53 @@
         android:layout_height="match_parent"
         android:background="@color/lightGray"
         tools:context=".views.ParkingSpacesActivity">
+    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
+                                                 android:layout_height="match_parent">
 
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_popup_sync"/>
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/parkings_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    <ImageView
-            android:id="@+id/background_imageview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/parking_empty_view"
-            android:background="@drawable/parking_empty_view"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|end"
-            android:contentDescription="@string/info_view"
-            app:srcCompat="@android:drawable/ic_menu_info_details"
-            android:id="@+id/info_imageview"/>
+
+
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@android:drawable/ic_popup_sync"/>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/parkings_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/adView" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+		<ImageView
+				android:id="@+id/background_imageview"
+				android:layout_width="match_parent"
+				android:layout_height="0dp"
+				android:contentDescription="@string/parking_empty_view"
+				android:background="@drawable/parking_empty_view" app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toTopOf="@+id/adView"
+		/>
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:contentDescription="@string/info_view"
+				app:srcCompat="@android:drawable/ic_menu_info_details"
+				android:id="@+id/info_imageview" android:layout_marginTop="8dp"
+				app:layout_constraintTop_toTopOf="@+id/background_imageview" android:layout_marginEnd="8dp"
+				app:layout_constraintEnd_toEndOf="@+id/parkings_recycler_view"/>
+		<com.google.android.gms.ads.AdView
+				xmlns:ads="http://schemas.android.com/apk/res-auto"
+				android:id="@+id/adView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				ads:adSize="BANNER"
+				ads:adUnitId="ca-app-pub-8384659766694860/5652811739"
+				ads:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+				ads:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+				ads:layout_constraintStart_toStartOf="parent">
+		</com.google.android.gms.ads.AdView>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
